public/css/styles.css
/******* Change Box Model ***************/
 *,
*:before,
*:after {
  box-sizing: border-box;
} 

* {
	margin: 0;
	padding: 0;
  font-family: 'Raleway', sans-serif;
}


#top-header {
  display: flex;
  justify-content: space-between;
  margin-top: 5%;
  margin-bottom: 5%;
  align-items: center;
}

#top-header a {
  text-decoration: none;
}

.siteName a {
  font-size: 40px;
  color: black;
}

.accountLink a {
  font-size: 1.5em;
  color: black;
}

nav {
  background-color: black;
  color: white;
  padding: 2%;
}

nav ul {
  display: flex;
  justify-content: space-evenly;
}

nav ul li {
  list-style-type: none;
  font-size: 1em;
}

h2 {
  margin: 3% 3% 3.5% 1%;
}

#features {
  position: relative;
}

#feature-list {
  background-color: rgb(255,255,255,.6);
  color: #00BFFF;
  padding: 1%;
  font-size: .75em;  
  position: absolute;
  top: 15%;
  margin-left: 3%;
}

#feature-list ul li {
  list-style-type: none;
  padding: 1%;
}

#feature-list button {
  background-color: 	#00BFFF;
  color: black;
  border: none;
  padding: 3%;
  margin-top: 2%;
}

#reviews h2 {
  margin-bottom: 2%;
}

#reviews {
  padding: 1%;
  margin-top: 6%;
  margin-bottom: 6%;
}

#reviews ul {
  margin-left: 5%;
}

#reviews ul li {
  padding-top: 1%;
  padding-bottom: 1%;
}

#delorean {
  width: 75%;
  display: block;
  margin: auto;
}

#upgrades {
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-items: center;
  align-items: center;
  row-gap: 20px;
}

.flux-capacitor {
  grid-column: 1/2;
  grid-row: 1/2;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.flux-capacitor img {
  width: 65px;
  height: 75px;
}

#flux {
  background-color: #00BFFF;
  padding: 5px 40px 5px 40px;
  border-style: solid;
}

.flame-decals {
  grid-column: 2/3;
  grid-row: 1/2;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#flame {
  background-color: 	#00BFFF;
  padding: 5px 40px 5px 40px;
  border-style: solid;
}

.flame-decals img {
  width: 65px;
  height: 75px;
}

.bumper-stickers {
  grid-column: 1/2;
  grid-row: 2/3;
  display: flex;
  flex-direction: column;
  align-items: center;

}
.bumper-stickers img {
  width: 65px;
  height: 75px;
}

#bumper {
  background-color: #00BFFF;
  padding: 5px 40px 5px 40px;
  border-style: solid;
}

.hub-caps {
  grid-column: 2/3;
  grid-row: 2/3;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.hub-caps img {
  width: 65px;
  height: 75px;
}

#hub {
  background-color: #00BFFF;
  padding: 5px 40px 5px 40px;
  border-style: solid;
}

footer {
  margin: 4% 0 0 1%;
}

#inv-display {
  display: flex;
  flex-wrap: wrap;
  gap: 2px;
  justify-content: center;
  list-style-type: none;
  
 }

 #inv-display li {
   width: 250px;
   height: 250px;
   border: solid 2px #c9c9c9;   
   border-radius: 5px; 
 }

 #inv-display img {
   width: 200px;
   height: 113px;
   margin-left: 9%;
   margin-top: 2%;
   border-radius: 5px;
 }

 #inv-display li a {
   text-decoration: none;
 }

 .namePrice {
   text-align: center;
 }

 #details-heading {
  margin-top: 3%;
  margin-left: 3%;
 }

 #vehicle-details img {
  width: 75%;
  margin: 5% 12% 5% 12%;
}

#vehicle-inv-details h2, h3, h4 {
  margin-top: 2%;
  margin-left: 2%;
}

#vehicle-inv-details h3 {
  background-color: #EBECF0;
}

@media only screen and (min-width: 640px) {
  html {
    background-image: url("/images/site/small_check.jpg");
  }
  
  body {
    background-color: white;
    margin: 5% 8% 5% 8%;
    border: solid 5px blue;
    padding: 3%;
  }

  nav ul {
    font-size: 1.75em;
  }

  #details {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  #reviews {
    grid-column: 2/3;
    grid-row: 1/2;
  }

  #reviews h2 {
    margin-left: -4%;
  }

  #delorean_upgrades {
    grid-column: 1/2;
    grid-row: 1/2;
  }

  #delorean_upgrades h2 {
    margin-left: 8.5%;
  }

  #delorean {
    width: 50%;
  }

  #feature-list {
    font-size: 1em;
    top: 25%;
    margin-left: 18%;
  }

  #reviews {
    margin: auto;
  }

  #reviews h2 {
    padding-bottom: 6%;
  }

  #reviews ul {
    margin-left: 0;
  }

  #reviews ul li {
    padding-top: 4%;
    padding-bottom: 4%;
  }

  #vehicle-details {
    display: flex;
  }

  #vehicle-details img {
    width: 50%;
    margin: 2%;
  }
 
}

